--- a/index.html
+++ b/index.html
@@ -1,37 +1,25 @@
 <!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-    <link rel="stylesheet" href="index.css"/>
-    <title>NL</title>
-    <style>
-        body {
-          background-image: url('https://wallpaperaccess.com/full/1363028.jpg');
-          background-repeat: no-repeat;
-          background-attachment: fixed;
-          background-size: 100% 100%;
-        }
-    </style>
-</head>
-<body>
-    <div class="centerit">
-        <span>
-            <h1 class="aryan">ARYAN SHARMA</h1>
-            <h2 class="NL">&lt;--NL--&gt;</h2>
-            <hr class="line">
-            <p>Python dev, front-end horse dev, and swag haver.</p>
-        </span>
-    </div>
-    <div class="list">
-        <ul class="elements">
-            <li><a href="#" class="fa fa-instagram"></a>
-            <li><a href="#" class="fa fa-github"></a></li>    
-            <li><a href="#" class="fa fa-spotify"></a></li>    
-
-        </ul>
-    </div>
+<html>
+  <head>
+    <meta charset="utf-8">
+    <script src="https://use.fontawesome.com/d1341f9b7a.js"></script>
+    <link rel="stylesheet" href="page.css">
+    <title>NL | Aryan Sharma</title>
+  </head>
+  <body>
+<div class="box">
+  <img src="mainimg.jpg" alt="" class="box-img">
+  <h1>
+NL</h1>
+<h5>
+Full stack - Sports - Music</h5>
+<p>
+<a>Hey! I'm Aryan Sharma, I'm the vice president of <a class="linkhai" href="https://teamcodetech.in">Team CodeTech</a>, I like to code, play football and play the piano. Hit me up on discord NL#5003 to contact me.</p>
+<ul>
+<li><a href="https://www.instagram.com/aryann_sharmaaa/"><i class="fa fa-instagram" aria-hidden="true" target="blank"></i></a></li>
+<li><a href="https://teamcodetech.in"><i class="fa fa-globe" aria-hidden="true" target="_blank"></i></a></li>
+<li><a href="mailto:adusharma22@gmail.com"><i class="fa fa-envelope-square" aria-hidden="true" target="_blank"></i></a></li>
+</ul>
+</div>
 </body>
 </html>
