--- a/Index.html
+++ b/Index.html
@@ -7,7 +7,7 @@
     <title>NL | Aryan Sharma</title>
   </head>
   <body>
-
+<!-- FUCK GITHUB FUCK GITHUB FUCK GITHUB OHLYU SHTI -->
 <div class="box">
   <img src="mainimg.jpg" alt="" class="box-img">
   <h1>
